# snake-game-sdl-ecs

./: CMakeLists.txt  LICENSE  README.md
src/: Game.cpp  Game.h  main.cpp
src/components/: FoodComponent.h  RenderComponent.h  SnakeComponent.h  TransformComponent.h
src/core/: Entity.h  EntityManager.cpp  EntityManager.h  System.h  Utility.cpp  Utility.h
src/systems/: CollisionSystem.cpp  CollisionSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
